--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>db</module>
         <module>common</module>
         <module>scheduler</module>
+        <module>downloader</module>
     </modules>
 
 </project>
