--- a/scheduler/src/main/resources/application.properties
+++ b/scheduler/src/main/resources/application.properties
@@ -1,16 +1,16 @@
-application.name=scheduler
+spring.application.name=scheduler
 server.port=10001
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/otp
-spring.datasourceusername=otp
-spring.datasourcepassword=otp
+spring.datasource.url=${spring.datasource.url}
+spring.datasource.username=${spring.datasource.username}
+spring.datasource.password=${spring.datasource.password}
 
 spring.jpa.hibernate.ddl-auto=update
 
-rabbitmq.host=localhost
-rabbitmq.port=5672
-rabbitmq.username=otp
-rabbitmq.password=otp
+spring.rabbitmq.host=${spring.rabbitmq.host}
+spring.rabbitmq.port=${spring.rabbitmq.port}
+spring.rabbitmq.username=${spring.rabbitmq.username}
+spring.rabbitmq.password=${spring.rabbitmq.password}
 
 logging.level.ua.com.valexa=debug
 
