--- a/downloader/pom.xml
+++ b/downloader/pom.xml
@@ -7,10 +7,10 @@
         <artifactId>afs</artifactId>
         <version>1.0.0</version>
     </parent>
-    <artifactId>scheduler</artifactId>
+    <artifactId>downloader</artifactId>
     <version>1.0.0</version>
-    <name>scheduler</name>
-    <description>scheduler</description>
+    <name>downloader</name>
+    <description>downloader</description>
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -46,27 +46,18 @@
         </dependency>
         <dependency>
             <groupId>ua.com.valexa</groupId>
-            <artifactId>db</artifactId>
-            <version>1.0.0</version>
-<!--            <scope>compile</scope>-->
-        </dependency>
-        <dependency>
-            <groupId>ua.com.valexa</groupId>
             <artifactId>common</artifactId>
             <version>1.0.0</version>
-<!--            <scope>compile</scope>-->
+            <scope>compile</scope>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.15.3</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
@@ -84,22 +75,6 @@
                 </configuration>
             </plugin>
         </plugins>
-        <resources>
-            <resource>
-                <directory>${project.parent.basedir}</directory>
-                <includes>
-                    <include>application.properties</include>
-                </includes>
-                <filtering>true</filtering>
-            </resource>
-            <resource>
-                <directory>src/main/resources</directory>
-                <includes>
-                    <include>application.properties</include>
-                </includes>
-                <filtering>true</filtering>
-            </resource>
-        </resources>
     </build>
 
 </project>
