Common application.properties

--- a/application.properties
+++ b/application.properties
@@ -16,4 +16,17 @@ spring.datasource.username=otp
 spring.datasource.password=otp
 
 
+# LOGGING
+logging.level.ua.com.valexa=debug
 
+
+# PORTS
+scheduler.port=10001
+downloader.port=10002
+
+
+# COMMON
+#downloader.mountPoint=/Users/valex/ISMC_STORAGE/DOWNLOADER
+downloader.mountPoint=P:\\ISMC_STORAGE\\DOWNLOADER
+proxyHost=
+proxyPort=
