--- a/downloader/src/main/resources/application.properties
+++ b/downloader/src/main/resources/application.properties
@@ -1,23 +1,19 @@
 spring.application.name=downloader
-server.port=10002
+server.port=${downloader.port}
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/otp
-spring.datasource.username=otp
-spring.datasource.password=otp
+spring.datasource.url=${spring.datasource.url}
+spring.datasource.username=${spring.datasource.username}
+spring.datasource.password=${spring.datasource.password}
 
 spring.jpa.hibernate.ddl-auto=update
 
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=otp
-spring.rabbitmq.password=otp
+spring.rabbitmq.host=${spring.rabbitmq.host}
+spring.rabbitmq.port=${spring.rabbitmq.port}
+spring.rabbitmq.username=${spring.rabbitmq.username}
+spring.rabbitmq.password=${spring.rabbitmq.password}
 
+logging.level.ua.com.valexa=${logging.level.ua.com.valexa}
 
-
-logging.level.ua.com.valexa=debug
-
-
-#downloader.mountPoint=/Users/valex/ISMC_STORAGE/DOWNLOADER
-downloader.mountPoint=P:\\ISMC_STORAGE\\DOWNLOADER
-downloader.proxyHost=
-downloader.proxyPort=
+mountPoint=${downloader.mountPoint}
+proxyHost=${proxyHost}
+proxyPort=${proxyPort}
