--- a/scheduler/src/main/resources/application.properties
+++ b/scheduler/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=scheduler
-server.port=10001
+server.port=${scheduler.port}
 
 spring.datasource.url=${spring.datasource.url}
 spring.datasource.username=${spring.datasource.username}
@@ -12,6 +12,6 @@ spring.rabbitmq.port=${spring.rabbitmq.port}
 spring.rabbitmq.username=${spring.rabbitmq.username}
 spring.rabbitmq.password=${spring.rabbitmq.password}
 
-logging.level.ua.com.valexa=debug
+logging.level.ua.com.valexa=${logging.level.ua.com.valexa}
 
 
