--- a/application.properties
+++ b/application.properties
@@ -23,7 +23,7 @@ logging.level.ua.com.valexa=debug
 # PORTS
 scheduler.port=10001
 downloader.port=10002
-
+web.port=9000
 
 # COMMON
 #downloader.mountPoint=/Users/valex/ISMC_STORAGE/DOWNLOADER
