--- a/web-backend/pom.xml
+++ b/web-backend/pom.xml
@@ -7,10 +7,10 @@
         <artifactId>afs</artifactId>
         <version>1.0.0</version>
     </parent>
-    <artifactId>scheduler</artifactId>
+    <artifactId>web-backend</artifactId>
     <version>1.0.0</version>
-    <name>scheduler</name>
-    <description>scheduler</description>
+    <name>web-backend</name>
+    <description>web-backend</description>
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -22,6 +22,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
         <dependency>
@@ -48,26 +52,8 @@
             <groupId>ua.com.valexa</groupId>
             <artifactId>db</artifactId>
             <version>1.0.0</version>
-<!--            <scope>compile</scope>-->
+            <scope>compile</scope>
         </dependency>
-        <dependency>
-            <groupId>ua.com.valexa</groupId>
-            <artifactId>common</artifactId>
-            <version>1.0.0</version>
-<!--            <scope>compile</scope>-->
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.15.3</version>
-        </dependency>
-
-
     </dependencies>
 
     <build>
