Fixed CPMS deadlock

--- a/application.properties
+++ b/application.properties
@@ -4,6 +4,8 @@ scheduler-response-queue=scheduler-response
 
 downloader-queue=downloader
 
+cpms-queue=cpms
+
 # QUEUE PROPERTIES
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
