--- a/cpms/pom.xml
+++ b/cpms/pom.xml
@@ -7,10 +7,10 @@
         <artifactId>afs</artifactId>
         <version>1.0.0</version>
     </parent>
-    <artifactId>scheduler</artifactId>
+    <artifactId>cpms</artifactId>
     <version>1.0.0</version>
-    <name>scheduler</name>
-    <description>scheduler</description>
+    <name>cpms</name>
+    <description>cpms</description>
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -45,29 +45,19 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>ua.com.valexa</groupId>
-            <artifactId>db</artifactId>
-            <version>1.0.0</version>
-<!--            <scope>compile</scope>-->
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
         </dependency>
         <dependency>
             <groupId>ua.com.valexa</groupId>
             <artifactId>common</artifactId>
             <version>1.0.0</version>
-<!--            <scope>compile</scope>-->
+            <scope>compile</scope>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.15.3</version>
-        </dependency>
-
-
     </dependencies>
 
     <build>
@@ -82,13 +72,6 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <useSystemClassLoader>false</useSystemClassLoader>
                 </configuration>
             </plugin>
         </plugins>
