--- a/cpms/src/main/resources/application.properties
+++ b/cpms/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.application.name=web-backend
-server.port=${web.port}
+
+spring.application.name=cpms
+server.port=${cpms.port}
 
 spring.datasource.url=${spring.datasource.url}
 spring.datasource.username=${spring.datasource.username}
@@ -14,4 +15,4 @@ spring.rabbitmq.password=${spring.rabbitmq.password}
 
 logging.level.ua.com.valexa=${logging.level.ua.com.valexa}
 
-scheduler-init-queue=${scheduler-init-queue}
+cpms-queue=${cpms-queue}
