--- a/application.properties
+++ b/application.properties
@@ -28,7 +28,7 @@ downloader.port=10002
 web.port=9000
 
 # COMMON
-#downloader.mountPoint=/Users/valex/ISMC_STORAGE/DOWNLOADER
-downloader.mountPoint=P:\\ISMC_STORAGE\\DOWNLOADER
+downloader.mountPoint=/Users/valex/ISMC_STORAGE/DOWNLOADER
+#downloader.mountPoint=P:\\ISMC_STORAGE\\DOWNLOADER
 proxyHost=
 proxyPort=
