Added importer module and simple reading job over Spring Batch

--- a/application.properties
+++ b/application.properties
@@ -3,6 +3,7 @@ scheduler-init-queue=scheduler-init
 scheduler-response-queue=scheduler-response
 
 downloader-queue=downloader
+importer-queue=importer
 
 cpms-queue=cpms
 
@@ -25,6 +26,7 @@ logging.level.ua.com.valexa=debug
 # PORTS
 scheduler.port=10001
 downloader.port=10002
+importer.port=10003
 web.port=9000
 
 # COMMON
