Changed importer and scheduler exchange

--- a/db/src/main/resources/application.properties
+++ b/db/src/main/resources/application.properties
@@ -1,9 +1,19 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/otp
-spring.datasourceusername=otp
-spring.datasourcepassword=otp
-
-spring.jpa.hibernate.ddl-auto=update
-
-logging.level.ua.com.valexa=debug
-
-
+#spring.application.name=downloader
+#server.port=${downloader.port}
+#
+#spring.datasource.url=${spring.datasource.url}
+#spring.datasource.username=${spring.datasource.username}
+#spring.datasource.password=${spring.datasource.password}
+#
+#spring.jpa.hibernate.ddl-auto=update
+#
+#spring.rabbitmq.host=${spring.rabbitmq.host}
+#spring.rabbitmq.port=${spring.rabbitmq.port}
+#spring.rabbitmq.username=${spring.rabbitmq.username}
+#spring.rabbitmq.password=${spring.rabbitmq.password}
+#
+#logging.level.ua.com.valexa=${logging.level.ua.com.valexa}
+#
+#mountPoint=${downloader.mountPoint}
+#proxyHost=${proxyHost}
+#proxyPort=${proxyPort}
