--- a/application.properties
+++ b/application.properties
@@ -30,7 +30,7 @@ importer.port=10003
 web.port=9000
 
 # COMMON
-downloader.mountPoint=/Users/valex/ISMC_STORAGE/DOWNLOADER
-#downloader.mountPoint=P:\\ISMC_STORAGE\\DOWNLOADER
+#downloader.mountPoint=/Users/valex/ISMC_STORAGE/DOWNLOADER
+downloader.mountPoint=P:\\ISMC_STORAGE\\DOWNLOADER
 proxyHost=
 proxyPort=
