--- a/importer/pom.xml
+++ b/importer/pom.xml
@@ -28,6 +28,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.batch</groupId>
+            <artifactId>spring-batch-core</artifactId>
+<!--            <version>your-spring-batch-version</version>-->
+        </dependency>
+
 
         <dependency>
             <groupId>org.postgresql</groupId>
@@ -69,6 +75,11 @@
             <artifactId>mapstruct</artifactId>
             <version>1.5.3.Final</version>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.batch</groupId>-->
+<!--            <artifactId>spring-batch-core</artifactId>-->
+<!--            <version>4.3.3</version>-->
+<!--        </dependency>-->
     </dependencies>
 
     <build>
