--- a/importer/src/main/resources/application.properties
+++ b/importer/src/main/resources/application.properties
@@ -14,4 +14,4 @@ spring.rabbitmq.password=${spring.rabbitmq.password}
 
 logging.level.ua.com.valexa=${logging.level.ua.com.valexa}
 
-
+spring.batch.jdbc.table-prefix=sys.batch_
