--- a/migrations/src/main/resources/db/changelog/version/v0001/005-spring_batch_tables.yaml
+++ b/migrations/src/main/resources/db/changelog/version/v0001/005-spring_batch_tables.yaml
@@ -5,7 +5,7 @@ databaseChangeLog:
       changes:
         - sql:
             sql: |
-              CREATE TABLE BATCH_JOB_INSTANCE  (
+              CREATE TABLE PUBLIC.BATCH_JOB_INSTANCE  (
               JOB_INSTANCE_ID BIGINT  NOT NULL PRIMARY KEY ,
               VERSION BIGINT ,
               JOB_NAME VARCHAR(100) NOT NULL,
@@ -13,7 +13,7 @@ databaseChangeLog:
               constraint JOB_INST_UN unique (JOB_NAME, JOB_KEY)
               ) ;
               
-              CREATE TABLE BATCH_JOB_EXECUTION  (
+              CREATE TABLE PUBLIC.BATCH_JOB_EXECUTION  (
               JOB_EXECUTION_ID BIGINT  NOT NULL PRIMARY KEY ,
               VERSION BIGINT  ,
               JOB_INSTANCE_ID BIGINT NOT NULL,
@@ -25,20 +25,20 @@ databaseChangeLog:
               EXIT_MESSAGE VARCHAR(2500) ,
               LAST_UPDATED TIMESTAMP,
               constraint JOB_INST_EXEC_FK foreign key (JOB_INSTANCE_ID)
-              references BATCH_JOB_INSTANCE(JOB_INSTANCE_ID)
+              references PUBLIC.BATCH_JOB_INSTANCE(JOB_INSTANCE_ID)
               ) ;
               
-              CREATE TABLE BATCH_JOB_EXECUTION_PARAMS  (
+              CREATE TABLE PUBLIC.BATCH_JOB_EXECUTION_PARAMS  (
               JOB_EXECUTION_ID BIGINT NOT NULL ,
               PARAMETER_NAME VARCHAR(100) NOT NULL ,
               PARAMETER_TYPE VARCHAR(100) NOT NULL ,
               PARAMETER_VALUE VARCHAR(2500) ,
               IDENTIFYING CHAR(1) NOT NULL ,
               constraint JOB_EXEC_PARAMS_FK foreign key (JOB_EXECUTION_ID)
-              references BATCH_JOB_EXECUTION(JOB_EXECUTION_ID)
+              references PUBLIC.BATCH_JOB_EXECUTION(JOB_EXECUTION_ID)
               ) ;
               
-              CREATE TABLE BATCH_STEP_EXECUTION  (
+              CREATE TABLE PUBLIC.BATCH_STEP_EXECUTION  (
               STEP_EXECUTION_ID BIGINT  NOT NULL PRIMARY KEY ,
               VERSION BIGINT NOT NULL,
               STEP_NAME VARCHAR(100) NOT NULL,
@@ -59,26 +59,26 @@ databaseChangeLog:
               EXIT_MESSAGE VARCHAR(2500) ,
               LAST_UPDATED TIMESTAMP,
               constraint JOB_EXEC_STEP_FK foreign key (JOB_EXECUTION_ID)
-              references BATCH_JOB_EXECUTION(JOB_EXECUTION_ID)
+              references PUBLIC.BATCH_JOB_EXECUTION(JOB_EXECUTION_ID)
               ) ;
               
-              CREATE TABLE BATCH_STEP_EXECUTION_CONTEXT  (
+              CREATE TABLE PUBLIC.BATCH_STEP_EXECUTION_CONTEXT  (
               STEP_EXECUTION_ID BIGINT NOT NULL PRIMARY KEY,
               SHORT_CONTEXT VARCHAR(2500) NOT NULL,
               SERIALIZED_CONTEXT TEXT ,
               constraint STEP_EXEC_CTX_FK foreign key (STEP_EXECUTION_ID)
-              references BATCH_STEP_EXECUTION(STEP_EXECUTION_ID)
+              references PUBLIC.BATCH_STEP_EXECUTION(STEP_EXECUTION_ID)
               ) ;
               
-              CREATE TABLE BATCH_JOB_EXECUTION_CONTEXT  (
+              CREATE TABLE PUBLIC.BATCH_JOB_EXECUTION_CONTEXT  (
               JOB_EXECUTION_ID BIGINT NOT NULL PRIMARY KEY,
               SHORT_CONTEXT VARCHAR(2500) NOT NULL,
               SERIALIZED_CONTEXT TEXT ,
               constraint JOB_EXEC_CTX_FK foreign key (JOB_EXECUTION_ID)
-              references BATCH_JOB_EXECUTION(JOB_EXECUTION_ID)
+              references PUBLIC.BATCH_JOB_EXECUTION(JOB_EXECUTION_ID)
               ) ;
               
-              CREATE SEQUENCE BATCH_STEP_EXECUTION_SEQ MAXVALUE 9223372036854775807 NO CYCLE;
-              CREATE SEQUENCE BATCH_JOB_EXECUTION_SEQ MAXVALUE 9223372036854775807 NO CYCLE;
-              CREATE SEQUENCE BATCH_JOB_SEQ MAXVALUE 9223372036854775807 NO CYCLE;
+              CREATE SEQUENCE PUBLIC.BATCH_STEP_EXECUTION_SEQ MAXVALUE 9223372036854775807 NO CYCLE;
+              CREATE SEQUENCE PUBLIC.BATCH_JOB_EXECUTION_SEQ MAXVALUE 9223372036854775807 NO CYCLE;
+              CREATE SEQUENCE PUBLIC.BATCH_JOB_SEQ MAXVALUE 9223372036854775807 NO CYCLE;
 
