added transformer module

--- a/application.properties
+++ b/application.properties
@@ -34,3 +34,4 @@ downloader.mountPoint=/Users/valex/ISMC_STORAGE/DOWNLOADER
 #downloader.mountPoint=P:\\ISMC_STORAGE\\DOWNLOADER
 proxyHost=
 proxyPort=
+spring.batch.jdbc.initialize-schema=always
