--- a/importer/src/main/resources/application.properties
+++ b/importer/src/main/resources/application.properties
@@ -14,4 +14,10 @@ spring.rabbitmq.password=${spring.rabbitmq.password}
 
 logging.level.ua.com.valexa=${logging.level.ua.com.valexa}
 
-spring.batch.jdbc.table-prefix=sys.batch_
+#spring.batch.jdbc.table-prefix=sys.batch_
+
+#spring.batch.jdbc.table-prefix=app1_batch_
+spring.batch.jdbc.initialize-schema=${spring.batch.jdbc.initialize-schema}
+
+logging.level.org.springframework.batch=DEBUG
+logging.level.org.springframework.jdbc.datasource.init=DEBUG
