--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <module>scheduler</module>
         <module>downloader</module>
         <module>importer</module>
+        <module>transformer</module>
         <module>web-backend</module>
     </modules>
 
