--- a/importer/pom.xml
+++ b/importer/pom.xml
@@ -7,7 +7,6 @@
         <artifactId>afs</artifactId>
         <version>1.0.0</version>
     </parent>
-    <groupId>ua.com.valexa</groupId>
     <artifactId>importer</artifactId>
     <version>1.0.0</version>
     <name>importer</name>
@@ -125,6 +124,26 @@
                 </configuration>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>false</filtering>
+            </resource>
+            <resource>
+                <directory>${project.parent.basedir}</directory>
+                <includes>
+                    <include>application.properties</include>
+                </includes>
+                <filtering>true</filtering>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>application.properties</include>
+                </includes>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
     </build>
 
 </project>
