--- a/importer/pom.xml
+++ b/importer/pom.xml
@@ -28,10 +28,14 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.batch</groupId>
-            <artifactId>spring-batch-core</artifactId>
-<!--            <version>your-spring-batch-version</version>-->
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.batch</groupId>-->
+<!--            <artifactId>spring-batch-core</artifactId>-->
+<!--&lt;!&ndash;            <version>4.2.8.RELEASE</version>&ndash;&gt;-->
+<!--        </dependency>-->
 
 
         <dependency>
@@ -39,6 +43,7 @@
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
