--- a/importer/src/main/resources/application.properties
+++ b/importer/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=${spring.datasource.url}
 spring.datasource.username=${spring.datasource.username}
 spring.datasource.password=${spring.datasource.password}
 
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 
 spring.rabbitmq.host=${spring.rabbitmq.host}
 spring.rabbitmq.port=${spring.rabbitmq.port}
@@ -16,8 +16,8 @@ logging.level.ua.com.valexa=${logging.level.ua.com.valexa}
 
 #spring.batch.jdbc.table-prefix=sys.batch_
 
-#spring.batch.jdbc.table-prefix=app1_batch_
-spring.batch.jdbc.initialize-schema=${spring.batch.jdbc.initialize-schema}
+#spring.batch.jdbc.table-prefix=SYS.IMPORTER_BATCH
+spring.batch.jdbc.initialize-schema=always
 
-logging.level.org.springframework.batch=DEBUG
-logging.level.org.springframework.jdbc.datasource.init=DEBUG
+#logging.level.org.springframework.batch=DEBUG
+#logging.level.org.springframework.jdbc.datasource.init=DEBUG
