--- a/web-backend/src/main/resources/application.properties
+++ b/web-backend/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=${spring.datasource.url}
 spring.datasource.username=${spring.datasource.username}
 spring.datasource.password=${spring.datasource.password}
 
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 
 spring.rabbitmq.host=${spring.rabbitmq.host}
 spring.rabbitmq.port=${spring.rabbitmq.port}
